# AIO

./: .dockerignore  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.claude/rules/: project_rules.md
docs/: index.md
docs/1/: 1.md  2.md  3.md  4.md
docs/2/: 1.md  2.md
docs/esxi/: clone.md  convert.md  esxi-power-saving.md  passthrough.md  self-starting.md  ssl.md
docs/home/: develop.md  network.md  pc.md
docs/javascripts/: analysis.js  mermaid-init.js
docs/network/: fault.md  fight.md  intranet.md  jumper.md  overview.md  settings.md
docs/preface-introduction/: all-in-one-env.md  what-is-esxi.md
docs/prefaces/: all-in-one-env.md  for-the-crowd.md  words-written-earlier.md
docs/preparation/: 4.md  base-settings.md  bios-settings.md  disk-partitioning.md  hardware-details.md  install-esxi.md
docs/qa/: purple.md
docs/remote/: ddns.md  esa.md  ipv6-ipv4.md  ipv6.md  overview.md  website.md
docs/route/: expansion.md  install.md  ipv6.md  open-clash.md
docs/synology/: cpu.md  design.md  install.md  remote-access.md  ssd.md  ssl-acme.md
overrides/: base.html  home.html  main.html
overrides/assets/stylesheets/: main.8a4f01ed.min.css
overrides/partials/: source-file.html
site/: 404.html  index.html  robots.txt  sitemap.xml
site/1/1/: index.html
site/1/2/: index.html
site/1/3/: index.html
site/1/4/: index.html
site/javascripts/: analysis.js
site/qa/: index.html
site/search/: search_index.json
(+94 files in other folders)
