[project]
name = "aio"
version = "0.1.0"
description = "家庭 All-in-One 服务器搭建指南"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material>=9.6.19",
]

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "pre-commit>=4.3.0",
]
